infra/k8s/enviroment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-service
  namespace: default
spec:
  type: LoadBalancer
  selector:
    app: demo
  ports:
    - port: 80
      targetPort: 5000
